log
Fri Mar 18 14:36:06 UTC 2022: 
 list.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|6
total_score: 0/70
9ec9f75
Fri Mar 18 14:36:53 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
a72959e
Fri Mar 18 14:38:46 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
9ed5fe9
Fri Mar 18 14:48:55 UTC 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:39:19: error: implicit declaration of function ‘first’ [-Werror=implicit-function-declaration]
   list->current = first(list);
                   ^~~~~
list.c:39:17: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   list->current = first(list);
                 ^
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
bf78af9
Fri Mar 18 14:56:12 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
eb1fcff
Fri Mar 18 15:00:52 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
be8e528
Fri Mar 18 15:02:43 UTC 2022: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
4077457
Fri Mar 18 15:05:09 UTC 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
c0be75e
Fri Mar 18 15:06:16 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:47:19: error: implicit declaration of function ‘next’; did you mean ‘exit’? [-Werror=implicit-function-declaration]
   list->current = next(list->current);
                   ^~~~
                   exit
list.c:47:17: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   list->current = next(list->current);
                 ^
cc1: all warnings being treated as errors
Compilation failed
e8fa1a2
Fri Mar 18 15:09:10 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:47:3: error: implicit declaration of function ‘next’; did you mean ‘exit’? [-Werror=implicit-function-declaration]
   next(list->current);
   ^~~~
   exit
cc1: all warnings being treated as errors
Compilation failed
4ed3ad7
Fri Mar 18 15:10:52 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘nextList’:
list.c:47:9: error: ‘List {aka struct List}’ has no member named ‘currrent’; did you mean ‘current’?
   list->currrent = next(list);
         ^~~~~~~~
         current
list.c:47:20: error: implicit declaration of function ‘next’; did you mean ‘exit’? [-Werror=implicit-function-declaration]
   list->currrent = next(list);
                    ^~~~
                    exit
cc1: all warnings being treated as errors
Compilation failed
001aca0
Fri Mar 18 15:14:30 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3b2a953
Fri Mar 18 15:16:17 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
617719e
Fri Mar 18 15:16:56 UTC 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
59c8742
Fri Mar 18 15:17:36 UTC 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
fe4f291
Fri Mar 18 18:38:25 UTC 2022: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘lastList’:
list.c:55:11: error: ‘List {aka struct List}’ has no member named ‘last’
   if (list->last == NULL || list->current == NULL) return NULL;
           ^~
list.c:56:23: error: ‘List {aka struct List}’ has no member named ‘last’
   list->current = list->last;
                       ^~
Compilation failed
f0d238e
Fri Mar 18 18:39:01 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
cf7abcf
